--- a/README.Rmd
+++ b/README.Rmd
@@ -17,19 +17,19 @@ library(NMsim)
 NMdataConf(reset=TRUE)
 ```
 
-# NMdata<a href='https://philipdelff.github.io/NMdata/'><img src='man/figures/NMsimlogo_alternate.png' align="right" height="120" /></a>
+# NMdata<a href='https://NMautoverse.github.io/NMdata/'><img src='man/figures/NMsimlogo_alternate.png' align="right" height="120" /></a>
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html)
 [![CRAN status](https://www.r-pkg.org/badges/version/NMsim)](https://CRAN.R-project.org/package=NMsim)
 [![CRAN downloads](https://cranlogs.r-pkg.org/badges/NMsim)](https://cran.r-project.org/package=NMsim)
-[![Codecov test coverage](https://codecov.io/gh/philipdelff/NMsim/branch/main/graph/badge.svg)](https://app.codecov.io/gh/philipdelff/NMsim?branch=main)
+[![Codecov test coverage](https://codecov.io/gh/NMautoverse/NMsim/branch/main/graph/badge.svg)](https://app.codecov.io/gh/NMautoverse/NMsim?branch=main)
 
-<!-- [![R-CMD-check](https://github.com/philipdelff/NMsim/workflows/R-CMD-check/badge.svg)](https://github.com/philipdelff/NMsim/actions) -->
+<!-- [![R-CMD-check](https://github.com/NMautoverse/NMsim/workflows/R-CMD-check/badge.svg)](https://github.com/NMautoverse/NMsim/actions) -->
 <!-- badges: end -->
 
 
 Please make sure to read this at 
-[`The NMsim website`](https://philipdelff.github.io/NMsim/) where you can browse several vignettes with examples on specific topics.
+[`The NMsim website`](https://NMautoverse.github.io/NMsim/) where you can browse several vignettes with examples on specific topics.
 
 `NMsim` is an R package that can simulate Nonmem models (using the
 `NMsim` function) based on just a simulation data set and a path to an
@@ -80,7 +80,7 @@ ggplot(datl,aes(TIME,value,colour=variable))+
     labs(x="Hours since first dose",y="Concentration (ng/mL)")
 ```
 
-This example was a simulation of a multiple dose regimen with a loading dose using a model estimated on single dose data. It is from the first vignette [`NMsim-basics.html`](https://philipdelff.github.io/NMsim/articles/NMsim-basics.html).
+This example was a simulation of a multiple dose regimen with a loading dose using a model estimated on single dose data. It is from the first vignette [`NMsim-basics.html`](https://NMautoverse.github.io/NMsim/articles/NMsim-basics.html).
 
 
 ## Supported types of simulations
@@ -99,7 +99,7 @@ In addition, `NMsim` provides other features to further modify the simulation co
 
 To learn how to run these simulations on your Nonmem models, get
 started with
-[`NMsim-basics.html`](https://philipdelff.github.io/NMsim/articles/NMsim-basics.html). It
+[`NMsim-basics.html`](https://NMautoverse.github.io/NMsim/articles/NMsim-basics.html). It
 is really easy.
 
 In addition, `NMsim` can simulate multiple models at a time. E.g., if a
@@ -171,7 +171,7 @@ their interpretation may depend on other values.
 The input data set must contain whatever variables are needed by the
 Nonmem model. A common issue is if the Nonmem model uses a covariate
 that is not in the simulation input data set. `NMdata`'s
-[NMcheckData](https://philipdelff.github.io/NMdata/reference/NMcheckData.html)
+[NMcheckData](https://NMautoverse.github.io/NMdata/reference/NMcheckData.html)
 is a good help identifying input data issues before running Nonmem -
 and when Nonmem acts unexpectedly.
 
@@ -257,5 +257,5 @@ be able to use `NMsim`.
 install.packages("NMsim")
 ## From github
 library(remotes)
-install_github("philipdelff/NMsim")
+install_github("NMautoverse/NMsim")
 ```
