--- a/vignettes/NMsim-publications.Rmd
+++ b/vignettes/NMsim-publications.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "NMsim related publications"
 output:
-rmarkdown::html_vignette:
+rmarkdown::html_document:
     toc: true
     code_folding: show
 Suggests: markdown
@@ -27,10 +27,16 @@ knitr::opts_chunk$set(
 ## knitr::opts_chunk$set(tidy.opts=list(width.cutoff=60), tidy=TRUE)
 ```
 
-## This page is under construction
+<img src='../man/figures/NMsimlogo240.png' align="right" height="120" />
+
 
 ## ACOP 2024
 
-NMsim - Seamless Nonmem Simulation Platform in R
-Authors: Philip Delff
+NMsim - Seamless Nonmem Simulation Platform in R  
+Authors: Philip Delff  
 Supplementary material: (coming)
+[pdf](../suppl/NMsim_general_web.pdf)
+[`Code`](../suppl/NMsim_general_html.Rmd)
+
+Building Automated Pharmacometrics Analysis Workflows in R with NMsim  
+Authors: Boris Grinshpun, Samer Mouksassi, Philip Delff  
