--- a/vignettes/NMsim-publications.Rmd
+++ b/vignettes/NMsim-publications.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "NMsim related publications"
+title: "NMsim Related Publications"
 output:
 rmarkdown::html_document:
     toc: true
@@ -32,11 +32,19 @@ knitr::opts_chunk$set(
 
 ## ACOP 2024
 
-NMsim - Seamless Nonmem Simulation Platform in R  
+NMsim - Seamless Nonmem Simulation Platform in R (Poster T32)  
 Authors: Philip Delff  
-Supplementary material: (coming)
 [pdf](https://github.com/NMautoverse/NMsim/blob/main/publications/ACOP2024/NMsim_general_web.pdf)
 [`Code`](https://github.com/NMautoverse/NMsim/blob/main/publications/ACOP2024/NMsim_general_html.Rmd)
 
-Building Automated Pharmacometrics Analysis Workflows in R with NMsim  
+Building Automated Pharmacometrics Analysis Workflows in R with NMsim (Poster T49)  
 Authors: Boris Grinshpun, Samer Mouksassi, Philip Delff  
+
+Simulation of clinical trial predictions with model uncertainty using NMsim (Poster T110)
+Authors: Sanaya Shroff, Philip Delff  
+
+Simulate modified Nonmem models using NMsim (Poster T19)  
+Authors: Simone Cassani, Jahidur Rashid, Christopher Banker, Philip Delff  
+
+A Model-Based Simulation Workflow Enables Automated and Accurate Generation of Clinical Pharmacology Summary Statistics (T103)  
+Authors: Brian M. Reilly Pharm.D., Ph.D., Philip H. Delff, Ph.D.
