--- a/vignettes/NMsim-publications.Rmd
+++ b/vignettes/NMsim-publications.Rmd
@@ -35,7 +35,7 @@ knitr::opts_chunk$set(
 NMsim - Seamless Nonmem Simulation Platform in R (Poster T32)  
 Authors: Philip Delff  
 [pdf](https://github.com/NMautoverse/NMsim/blob/main/publications/ACOP2024/NMsim_general_web.pdf)
-[`Code`](https://github.com/NMautoverse/NMsim/blob/main/publications/ACOP2024/NMsim_general_html.Rmd)
+<!-- [`Code`](https://github.com/NMautoverse/NMsim/blob/main/publications/ACOP2024/NMsim_general_html.Rmd) -->
 
 Building Automated Pharmacometrics Analysis Workflows in R with NMsim (Poster T49)  
 Authors: Boris Grinshpun, Samer Mouksassi, Philip Delff  
